Collapse tables on mobile to prevent horizontal scrollbar

--- a/sass/layout/_typography.scss
+++ b/sass/layout/_typography.scss
@@ -429,20 +429,7 @@ body {
       word-break: break-all;
       word-wrap: break-word;
       margin-bottom: 2rem;
-    }
-
-    // Tables
-    th,
-    td {
-      font-family: $font-base;
-      height: 3rem;
-      padding: 1rem;
-    }
-
-    // Table heading cells
-    th {
-      font-weight: 700;
-    }
+    }    
 
     // Text font stack
     p,
